# clientai

./: .gitignore  404.html  CONTRIBUTING.md  README.md  build_docs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md  issue.md  showcase-submission.md
.github/workflows/: linting.yml  python-versions.yml  tests.yml  type-check.yml
advanced/agent/creating_run/: index.html
advanced/client/groq_specific/: index.html
advanced/client/ollama_specific/: index.html
advanced/client/openai_specific/: index.html
advanced/client/replicate_specific/: index.html
advanced/error_handling/: index.html
advanced/groq_specific/: index.html
advanced/ollama_specific/: index.html
advanced/openai_specific/: index.html
advanced/overview/: index.html
advanced/replicate_specific/: index.html
api/ai_provider/: index.html
api/client/ai_provider/: index.html
api/client/clientai/: index.html
api/clientai/: index.html
api/ollama_manager/ollama_manager/: index.html
api/ollama_manager/ollama_server_config/: index.html
api/ollama_provider/: index.html
api/openai_provider/: index.html
api/overview/: index.html
api/replicate_provider/: index.html
api/specific_providers/groq_provider/: index.html
api/specific_providers/ollama_provider/: index.html
api/specific_providers/openai_provider/: index.html
api/specific_providers/replicate_provider/: index.html
clientai/: __init__.py  _common_types.py  _constants.py  _typing.py  ai_provider.py  client_ai.py  exceptions.py
clientai/agent/: __init__.py  exceptions.py
clientai/agent/config/: __init__.py  defaults.py  models.py  steps.py  tools.py
clientai/agent/core/: __init__.py  agent.py  context.py  execution.py  factory.py  workflow.py
clientai/agent/formatting/: __init__.py  formatter.py  options.py
clientai/agent/memory/: __init__.py  base.py  decorators.py  llm.py  prompts.py  types.py
clientai/agent/steps/: __init__.py  base.py  decorators.py  registry.py  types.py
clientai/agent/tools/: __init__.py  base.py  decorators.py  registry.py  types.py
clientai/agent/types/: __init__.py  common.py  models.py  protocols.py
clientai/agent/utils/: __init__.py  exceptions.py  validation.py
clientai/agent/validation/: __init__.py  base.py  exceptions.py  result.py  types.py
clientai/groq/: __init__.py  _typing.py  provider.py
clientai/ollama/: __init__.py  _typing.py  provider.py
clientai/ollama/manager/: __init__.py  config.py  core.py  exceptions.py  platform_info.py
clientai/openai/: __init__.py  _typing.py  provider.py
clientai/replicate/: __init__.py  _typing.py  provider.py
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
community/LICENSE/: index.html
community/overview/: index.html
community/showcase_submission/: index.html
docs/: extending.md  index.md  installing.md  quick-start.md  showcase.md
docs/advanced/: error_handling.md  overview.md  replicate_specific.md
docs/advanced/agent/: creating_run.md
docs/advanced/client/: groq_specific.md  ollama_specific.md  openai_specific.md
docs/api/: ai_provider.md  overview.md  replicate_provider.md
docs/api/client/: clientai.md
docs/api/specific_providers/: groq_provider.md
docs/community/: showcase_submission.md
docs/examples/: ai_dungeon_master.md  overview.md
docs/examples/agent/: code_analyzer.md  simple_qa.md  task_planner.md  writing_assistant.md
docs/examples/client/: ai_dungeon_master.md  simple_qa.md  translator.md
docs/learn/: overview.md
docs/stylesheets/: extra.css
docs/usage/: error_handling.md  initialization.md  multiple_providers.md  ollama_manager.md  overview.md  text_generation.md
docs/usage/agent/: context.md  creating_agents.md  tools.md  validation.md  workflow_steps.md
docs/usage/client/: chat_functionality.md
examples/agent/code_analyzer/: index.html
examples/agent/simple_qa/: index.html
examples/agent/task_planner/: index.html
examples/agent/writing_assistant/: index.html
examples/ai_dungeon_master/: index.html
examples/client/ai_dungeon_master/: index.html
examples/overview/: index.html
extending/: index.html
installing/: index.html
learn/overview/: index.html
quick-start/: index.html
search/: search_index.json
showcase/: index.html
tests/agent/: test_agent.py  test_context.py  test_core.py  test_execution.py  test_factory.py  test_memory.py  test_steps.py  test_tools.py  test_workflow.py
tests/groq/: test_exceptions.py  test_provider.py
tests/ollama/: test_exceptions.py  test_manager.py  test_ollama_server.py  test_provider.py
tests/openai/: test_exceptions.py  test_provider.py
tests/replicate/: test_exceptions.py  test_provider.py
usage/chat_functionality/: index.html
usage/error_handling/: index.html
usage/initialization/: index.html
usage/multiple_providers/: index.html
usage/ollama_manager/: index.html
usage/overview/: index.html
usage/text_generation/: index.html
(+51 files in other folders)
